--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "coffee-script": "^1.9.1",
-    "del": "^1.1.1",
+    "coffeescript": "^2.3.2",
+    "del": "^3.0.0",
     "gulp": "^3.8.11",
-    "gulp-angular-templatecache": "^1.5.0",
-    "gulp-coffee": "^2.3.1",
-    "gulp-coffeelint": "^0.4.0",
+    "gulp-angular-templatecache": "^2.2.2",
+    "gulp-coffee": "^3.0.2",
+    "gulp-coffeelint": "^0.6.0",
     "gulp-concat": "^2.5.2",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.3",
-    "gulp-sourcemaps": "^1.5.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-util": "^3.0.4",
-    "run-sequence": "^1.0.2",
-    "streamqueue": "^0.1.3"
+    "run-sequence": "^2.2.1",
+    "streamqueue": "^1.1.2"
   },
   "description": "gi-ui -------------",
   "bugs": {
