--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "ng-sortable": "~1.1.9",
     "angular-ui-tree": "~2.2.0",
     "ngprogress": "~1.0.7",
-    "angular-spinner": "~0.6.1",
+    "angular-spinner": "https://github.com/urish/angular-spinner.git#~0.6.1",
     "gi-util": "https://github.com/freightlinksolutionsltd/gi-util.git"
   },
   "dependencies": {
